cadastro de receitas

--- a/src/Fiap.Masterchef.Web/Views/_ViewImports.cshtml
+++ b/src/Fiap.Masterchef.Web/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 @using Fiap.Masterchef.Web
+@using Fiap.Masterchef.Core.Application.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
